--- a/ng2-signalR.consumer/package.json
+++ b/ng2-signalR.consumer/package.json
@@ -86,6 +86,7 @@
     "core-js": "^2.4.1",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
+    "ng2-signalr": "file:///E:\\Development\\Web\\ng2-signalR\\ng2-signalr",
     "reflect-metadata": "^0.1.9",
     "rxjs": "~5.0.2",
     "zone.js": "~0.7.4"
