--- a/ng2-signalR/package.json
+++ b/ng2-signalR/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-signalr",
-  "version": "0.0.2-alpha",
+  "version": "0.0.1",
   "description": "signalr typescript library",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
