--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "report-coverage": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "prepublish": "tsc"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HNeukermans/ng2-signalR.git"
+  },
   "keywords": [
     "signalR",
     "typescript",
@@ -46,18 +50,16 @@
     "karma-webpack": "^1.8.0",
     "lodash": "^4.17.2",
     "phantomjs-prebuilt": "^2.1.7",
-    "reflect-metadata": "0.1.8",
+    "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.2",
     "ts-loader": "^1.3.3",
     "tslint": "4.2.0",
-    "typescript": "^2.1.4",
+    "typescript": "2.1.4",
     "webpack": "2.2.0-rc.3",
     "zone.js": "^0.7.4"
   },
   "peerDependencies": {},
   "dependencies": {
-    "@angular/core": "^2.0.0",
-    "reflect-metadata": "^0.1.8",
-    "typescript": "^2.0.3"
+    "@angular/core": ">=2.0.0"
   }
 }
