--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "webpack": "webpack",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "report-coverage": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "prepublish": "tsc"
+    "prepublish": "tsc",
+    "ngc-build": "ngc -p ./tsconfig-ngc.json"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,9 @@
   },
   "homepage": "https://github.com/HNeukermans/ng2-signalr#readme",
   "devDependencies": {
+    "@angular/compiler": "^2.4.7",
+    "@angular/compiler-cli": "^2.4.7",
+    "@angular/platform-server": "^2.4.7",
     "@types/jasmine": "^2.2.33",
     "@types/js-base64": "^2.1.3",
     "@types/lodash": "^4.14.40",
@@ -54,7 +58,7 @@
     "rxjs": "^5.0.2",
     "ts-loader": "^1.3.3",
     "tslint": "4.2.0",
-    "typescript": "2.1.4",
+    "typescript": "^2.1.6",
     "webpack": "2.2.0-rc.3",
     "zone.js": "^0.7.4"
   },
