--- a/tsconfig-ngc.json
+++ b/tsconfig-ngc.json
@@ -24,5 +24,8 @@
     "exclude": [
         "node_modules",
         "lib"
-    ]
+    ],
+    "angularCompilerOptions": {
+        "skipTemplateCodegen": true
+    }
 }
