--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
   },
   "homepage": "https://github.com/HNeukermans/ng2-signalr#readme",
   "devDependencies": {
-    "@angular/compiler": "^2.4.7",
+    "@angular/common": "^2.4.7",
+    "@angular/compiler": ">=2.4.7",
     "@angular/compiler-cli": "^2.4.7",
+    "@angular/platform-browser": "^2.4.7",
     "@angular/platform-server": "^2.4.7",
+    "@angular/router": "^3.4.7",
     "@types/jasmine": "^2.2.33",
     "@types/js-base64": "^2.1.3",
     "@types/lodash": "^4.14.40",
@@ -64,6 +67,7 @@
   },
   "peerDependencies": {},
   "dependencies": {
-    "@angular/core": ">=2.0.0"
+    "@angular/core": ">=2.0.0",
+    "@angular/router": ">=3.0.0"
   }
 }
