--- a/package.json
+++ b/package.json
@@ -1,73 +1,72 @@
 {
-  "name": "ng2-signalr",
-  "version": "1.0.8",
-  "description": "signalr typescript library",
-  "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
-  "types": "lib/index.d.ts",
-  "scripts": {
-    "dev": "tsc --watch",
-    "test": "karma start",
-    "build": "tsc",
-    "webpack": "webpack",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "report-coverage": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "prepublish": "tsc",
-    "ngc-build": "ngc -p ./tsconfig-ngc.json"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/HNeukermans/ng2-signalR.git"
-  },
-  "keywords": [
-    "signalR",
-    "typescript",
-    "angular 2"
-  ],
-  "author": "Hannes Neukermans",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/HNeukermans/ng2-signalr/issues"
-  },
-  "homepage": "https://github.com/HNeukermans/ng2-signalr#readme",
-  "devDependencies": {
-    "@angular/common": "^2.4.7",
-    "@angular/compiler": ">=2.4.7",
-    "@angular/compiler-cli": "^2.4.7",
-    "@angular/platform-browser": "^2.4.7",
-    "@angular/platform-server": "^2.4.7",
-    "@angular/router": "^3.4.7",
-    "@types/jasmine": "^2.2.33",
-    "@types/js-base64": "^2.1.3",
-    "@types/lodash": "^4.14.40",
-    "awesome-typescript-loader": "3.0.0-beta.17",
-    "core-js": "^2.3.0",
-    "coveralls": "^2.11.15",
-    "es6-shim": "^0.35.0",
-    "istanbul-instrumenter-loader": "^1.0.0",
-    "jasmine": "^2.5.2",
-    "jasmine-core": "^2.4.1",
-    "jasmine-node": "^1.14.5",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.0",
-    "lodash": "^4.17.2",
-    "phantomjs-prebuilt": "^2.1.7",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.2",
-    "ts-loader": "^1.3.3",
-    "tslint": "4.2.0",
-    "typescript": "^2.1.6",
-    "webpack": "2.2.0-rc.3",
-    "zone.js": "^0.7.4"
-  },
-  "peerDependencies": {},
-  "dependencies": {
-    "@angular/core": ">=2.0.0",
-    "@angular/router": ">=3.0.0"
-  }
+    "name": "ng2-signalr",
+    "version": "2.0.0",
+    "description": "angular2 signalr library",
+    "main": "bundles/ng2-signalr.umd.js",
+    "module": "index.js",
+    "scripts": {
+        "build": "node build.js",
+        "test": "karma start",
+        "pack-lib": "npm pack ./dist",
+        "publish-lib": "npm publish ./dist",
+        "compodoc": "compodoc -p tsconfig.json",
+        "compodoc-serve": "compodoc -s"
+    },
+    "typings": "index.d.ts",
+    "author": "Hannes Neukermans",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/HNeukermans/ng2-signalR.git"
+    },
+    "bugs": {
+        "url": "https://github.com/robisim74/ng2-signalr/issues"
+    },
+    "homepage": "https://github.com/HNeukermans/ng2-signalR",
+    "keywords": [
+        "signalR",
+        "typescript",
+        "angular 2"
+    ],
+    "license": "MIT",
+    "peerDependencies": {
+        "@angular/common": ">= 2.0.0 || >= 4.0.0",
+        "@angular/core": ">= 2.0.0 || >= 4.0.0",
+        "@angular/router": ">=3.0.0 || >= 4.0.0",
+        "jquery": ">=2.0.0",
+        "signalr": "^>=2.2.1"
+    },
+    "devDependencies": {
+        "@angular/common": "2.4.6",
+        "@angular/compiler": "2.4.6",
+        "@angular/compiler-cli": "2.4.6",
+        "@angular/core": "2.4.6",
+        "@angular/platform-browser": "2.4.6",
+        "@angular/platform-browser-dynamic": "2.4.6",
+        "@angular/platform-server": "2.4.6",
+        "@angular/router": "3.4.6",
+        "@types/jasmine": "2.5.41",
+        "@types/node": "7.0.5",
+        "codelyzer": "2.0.0",
+        "compodoc": "0.0.41",
+        "core-js": "2.4.1",
+        "jasmine-core": "2.5.2",
+        "karma": "1.4.1",
+        "karma-chrome-launcher": "2.0.0",
+        "karma-jasmine": "1.1.0",
+        "karma-sourcemap-loader": "0.3.7",
+        "karma-spec-reporter": "0.0.26",
+        "karma-webpack": "2.0.2",
+        "reflect-metadata": "0.1.9",
+        "rollup": "0.41.4",
+        "rxjs": "5.1.0",
+        "ts-helpers": "1.1.2",
+        "ts-loader": "2.0.0",
+        "tslint": "4.4.2",
+        "typescript": "2.0.10",
+        "webpack": "2.2.1",
+        "zone.js": "0.7.6",
+        "shelljs": "0.7.6",
+        "chalk": "1.1.3",
+        "uglify-js": "2.7.5"
+    }
 }
