--- a/package.json
+++ b/package.json
@@ -1,72 +1,74 @@
 {
-    "name": "ng2-signalr",
-    "version": "2.0.2",
-    "description": "angular2 signalr library",
-    "main": "bundles/ng2-signalr.umd.js",
-    "module": "index.js",
-    "scripts": {
-        "build": "node build.js",
-        "test": "karma start",
-        "pack-lib": "npm pack ./dist",
-        "publish-lib": "npm publish ./dist",
-        "compodoc": "compodoc -p tsconfig.json",
-        "compodoc-serve": "compodoc -s"
-    },
-    "typings": "index.d.ts",
-    "author": "Hannes Neukermans",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/HNeukermans/ng2-signalR.git"
-    },
-    "bugs": {
-        "url": "https://github.com/robisim74/ng2-signalr/issues"
-    },
-    "homepage": "https://github.com/HNeukermans/ng2-signalR",
-    "keywords": [
-        "signalR",
-        "typescript",
-        "angular 2"
-    ],
-    "license": "MIT",
-    "peerDependencies": {
-        "@angular/common": ">= 2.0.0 || >= 4.0.0",
-        "@angular/core": ">= 2.0.0 || >= 4.0.0",
-        "@angular/router": ">=3.0.0 || >= 4.0.0",
-        "jquery": ">=2.0.0",
-        "signalr": "^>=2.2.1"
-    },
-    "devDependencies": {
-        "@angular/common": "2.4.6",
-        "@angular/compiler": "2.4.6",
-        "@angular/compiler-cli": "2.4.6",
-        "@angular/core": "2.4.6",
-        "@angular/platform-browser": "2.4.6",
-        "@angular/platform-browser-dynamic": "2.4.6",
-        "@angular/platform-server": "2.4.6",
-        "@angular/router": "3.4.6",
-        "@types/jasmine": "2.5.41",
-        "@types/node": "7.0.5",
-        "codelyzer": "2.0.0",
-        "compodoc": "0.0.41",
-        "core-js": "2.4.1",
-        "jasmine-core": "2.5.2",
-        "karma": "1.4.1",
-        "karma-chrome-launcher": "2.0.0",
-        "karma-jasmine": "1.1.0",
-        "karma-sourcemap-loader": "0.3.7",
-        "karma-spec-reporter": "0.0.26",
-        "karma-webpack": "2.0.2",
-        "reflect-metadata": "0.1.9",
-        "rollup": "0.41.4",
-        "rxjs": "5.1.0",
-        "ts-helpers": "1.1.2",
-        "ts-loader": "2.0.0",
-        "tslint": "4.4.2",
-        "typescript": "2.0.10",
-        "webpack": "2.2.1",
-        "zone.js": "0.7.6",
-        "shelljs": "0.7.6",
-        "chalk": "1.1.3",
-        "uglify-js": "2.7.5"
-    }
+  "name": "ng2-signalr",
+  "version": "2.0.2",
+  "description": "angular2 signalr library",
+  "main": "bundles/ng2-signalr.umd.js",
+  "module": "index.js",
+  "scripts": {
+    "build": "node build.js",
+    "test": "karma start",
+    "pack-lib": "npm pack ./dist",
+    "publish-lib": "npm publish ./dist",
+    "compodoc": "compodoc -p tsconfig.json",
+    "compodoc-serve": "compodoc -s",
+    "report-coverage": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+  },
+  "typings": "index.d.ts",
+  "author": "Hannes Neukermans",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HNeukermans/ng2-signalR.git"
+  },
+  "bugs": {
+    "url": "https://github.com/robisim74/ng2-signalr/issues"
+  },
+  "homepage": "https://github.com/HNeukermans/ng2-signalR",
+  "keywords": [
+    "signalR",
+    "typescript",
+    "angular 2"
+  ],
+  "license": "MIT",
+  "peerDependencies": {
+    "@angular/common": ">= 2.0.0 || >= 4.0.0",
+    "@angular/core": ">= 2.0.0 || >= 4.0.0",
+    "@angular/router": ">=3.0.0 || >= 4.0.0",
+    "jquery": ">=2.0.0",
+    "signalr": "^>=2.2.1"
+  },
+  "devDependencies": {
+    "@angular/common": "2.4.6",
+    "@angular/compiler": "2.4.6",
+    "@angular/compiler-cli": "2.4.6",
+    "@angular/core": "2.4.6",
+    "@angular/platform-browser": "2.4.6",
+    "@angular/platform-browser-dynamic": "2.4.6",
+    "@angular/platform-server": "2.4.6",
+    "@angular/router": "3.4.6",
+    "@types/jasmine": "2.5.41",
+    "@types/node": "7.0.5",
+    "chalk": "1.1.3",
+    "codelyzer": "2.0.0",
+    "compodoc": "0.0.41",
+    "core-js": "2.4.1",
+    "coveralls": "^2.13.0",
+    "jasmine-core": "2.5.2",
+    "karma": "1.4.1",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-jasmine": "1.1.0",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "2.0.2",
+    "reflect-metadata": "0.1.9",
+    "rollup": "0.41.4",
+    "rxjs": "5.1.0",
+    "shelljs": "0.7.6",
+    "ts-helpers": "1.1.2",
+    "ts-loader": "2.0.0",
+    "tslint": "4.4.2",
+    "typescript": "2.0.10",
+    "uglify-js": "2.7.5",
+    "webpack": "2.2.1",
+    "zone.js": "0.7.6"
+  }
 }
