--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-signalr",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "angular2 signalr library",
   "main": "bundles/ng2-signalr.umd.js",
   "module": "index.js",
@@ -74,5 +74,8 @@
     "uglify-js": "2.7.5",
     "webpack": "2.2.1",
     "zone.js": "0.7.6"
+  },
+  "dependencies": {
+    "eslint": "^4.7.2"
   }
 }
