--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-signalr",
-  "version": "2.1.1",
+  "version": "5.0.0",
   "description": "angular2 signalr library",
   "main": "bundles/ng2-signalr.umd.js",
   "module": "index.js",
@@ -27,7 +27,10 @@
   "keywords": [
     "signalR",
     "typescript",
-    "angular 2"
+    "angular 2",
+    "angular 3",
+    "angular 4",
+    "angular 5"
   ],
   "license": "MIT",
   "peerDependencies": {
