--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-signalr",
-  "version": "5.0.0",
+  "version": "6.0.0",
   "description": "angular2 signalr library",
   "main": "bundles/ng2-signalr.umd.js",
   "module": "index.js",
@@ -34,25 +34,26 @@
   ],
   "license": "MIT",
   "peerDependencies": {
-    "@angular/common": ">= 2.0.0 || >= 5.0.0",
-    "@angular/core": ">= 2.0.0 || >= 5.0.0",
-    "@angular/router": ">=3.0.0 || >= 5.0.0",
+    "@angular/common": ">= 2.0.0 || >= 6.0.0",
+    "@angular/core": ">= 2.0.0 || >= 6.0.0",
+    "@angular/router": ">=3.0.0 || >= 6.0.0",
     "jquery": ">= 2.0.0",
     "signalr": ">= 2.2.1"
   },
   "devDependencies": {
-    "@angular/common": "5.0.0",
-    "@angular/compiler": "5.0.0",
-    "@angular/compiler-cli": "5.0.0",
-    "@angular/core": "5.0.0",
-    "@angular/platform-browser": "5.0.0",
-    "@angular/platform-browser-dynamic": "5.0.0",
-    "@angular/platform-server": "5.0.0",
-    "@angular/router": "5.0.0",
+    "@angular/animations": "6.0.0",
+    "@angular/common": "6.0.0",
+    "@angular/compiler": "6.0.0",
+    "@angular/compiler-cli": "6.0.0",
+    "@angular/core": "6.0.0",
+    "@angular/platform-browser": "6.0.0",
+    "@angular/platform-browser-dynamic": "6.0.0",
+    "@angular/platform-server": "6.0.0",
+    "@angular/router": "6.0.0",
     "@types/jasmine": "2.5.41",
     "@types/node": "7.0.5",
     "chalk": "1.1.3",
-    "codelyzer": "2.0.0",
+    "codelyzer": "4.3.0",
     "compodoc": "0.0.41",
     "core-js": "2.4.1",
     "coveralls": "^2.13.0",
@@ -68,12 +69,12 @@
     "karma-webpack": "2.0.2",
     "reflect-metadata": "0.1.9",
     "rollup": "0.41.4",
-    "rxjs": "5.1.0",
+    "rxjs": "6.1.0",
     "shelljs": "0.7.6",
     "ts-helpers": "1.1.2",
     "ts-loader": "2.0.0",
-    "tslint": "4.4.2",
-    "typescript": "2.4.2",
+    "tslint": "5.10.0",
+    "typescript": "2.7.2",
     "uglify-js": "2.7.5",
     "webpack": "2.2.1",
     "zone.js": "0.7.6"
