--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "angular 2",
     "angular 3",
     "angular 4",
-    "angular 5"
+    "angular 5",
+    "angular 6"
   ],
   "license": "MIT",
   "peerDependencies": {
