--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@types/jasmine": "2.5.41",
     "@types/node": "7.0.5",
     "chalk": "1.1.3",
-    "codelyzer": "4.3.0",
+    "codelyzer": "^5.0.1",
     "compodoc": "0.0.41",
     "core-js": "2.4.1",
     "coveralls": "^2.13.0",
