--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-signalr",
-  "version": "6.1.0",
+  "version": "8.0.1",
   "description": "angular2 signalr library",
   "main": "bundles/ng2-signalr.umd.js",
   "module": "index.js",
@@ -27,11 +27,7 @@
   "keywords": [
     "signalR",
     "typescript",
-    "angular 2",
-    "angular 3",
-    "angular 4",
-    "angular 5",
-    "angular 6"
+    "angular 8"
   ],
   "license": "MIT",
   "peerDependencies": {
@@ -48,16 +44,18 @@
     "@angular/platform-browser-dynamic": "8.1.0",
     "@angular/platform-server": "8.1.0",
     "@angular/router": "8.1.0",
-    "@types/jasmine": "2.5.41",
-    "@types/node": "7.0.5",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "chalk": "1.1.3",
     "codelyzer": "^5.0.1",
     "compodoc": "0.0.41",
     "core-js": "2.4.1",
     "coveralls": "^2.13.0",
     "istanbul": "^0.4.5",
-    "jasmine": "^2.5.3",
-    "jasmine-core": "2.5.2",
+    "jasmine": "^3.4.0",
+    "jasmine-core": "^3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
     "karma": "^1.4.1",
     "karma-chrome-launcher": "2.0.0",
     "karma-coverage": "^1.1.1",
@@ -72,12 +70,13 @@
     "ts-helpers": "1.1.2",
     "ts-loader": "2.0.0",
     "tslint": "5.11.0",
-    "typescript": "3.4.5",
+    "typescript": "~3.4.3",
     "uglify-js": "2.7.5",
     "webpack": "2.2.1",
     "zone.js": "0.9.1"
   },
   "dependencies": {
-    "eslint": "^4.7.2"
+    "eslint": "^4.7.2",
+    "tsickle": "^0.35.0"
   }
 }
