--- a/tsconfig-build.json
+++ b/tsconfig-build.json
@@ -3,16 +3,16 @@
         "baseUrl": ".",
         "declaration": true,
         "experimentalDecorators": true,
-        "module": "es2015",
+        "module": "esnext",
         "moduleResolution": "node",
         "outDir": "dist",
         "rootDir": ".",
         "sourceMap": true,
         "inlineSources": true,
-        "target": "es5",
+        "target": "es2015",
         "skipLibCheck": true,
         "lib": [
-            "es2015",
+            "es2018",
             "dom"
         ]
     },
