--- a/package.json
+++ b/package.json
@@ -1,82 +1,49 @@
 {
   "name": "ng2-signalr",
-  "version": "8.0.1",
-  "description": "angular2 signalr library",
-  "main": "bundles/ng2-signalr.umd.js",
-  "module": "index.js",
+  "version": "0.0.0",
   "scripts": {
-    "build": "node build.js",
-    "test": "karma start --single-run --no-auto-watch",
-    "pack-lib": "npm pack ./dist",
-    "publish-lib": "npm publish ./dist",
-    "compodoc": "compodoc -p tsconfig.json",
-    "compodoc-serve": "compodoc -s",
-    "report-coverage": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "cover": "istanbul cover node_modules/jasmine/bin/jasmine.js"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint"
   },
-  "typings": "index.d.ts",
-  "author": "Hannes Neukermans",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/HNeukermans/ng2-signalR.git"
-  },
-  "bugs": {
-    "url": "https://github.com/robisim74/ng2-signalr/issues"
-  },
-  "homepage": "https://github.com/HNeukermans/ng2-signalR",
-  "keywords": [
-    "signalR",
-    "typescript",
-    "angular 8"
-  ],
-  "license": "MIT",
-  "peerDependencies": {
-    "jquery": ">= 2.0.0",
-    "signalr": ">= 2.2.1"
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~8.0.0",
+    "@angular/common": "~8.0.0",
+    "@angular/compiler": "~8.0.0",
+    "@angular/core": "~8.0.0",
+    "@angular/forms": "~8.0.0",
+    "@angular/platform-browser": "~8.0.0",
+    "@angular/platform-browser-dynamic": "~8.0.0",
+    "@angular/router": "~8.0.0",
+    "rxjs": "~6.4.0",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/animations": "8.1.0",
-    "@angular/common": "8.1.0",
-    "@angular/compiler": "8.1.0",
-    "@angular/compiler-cli": "8.1.0",
-    "@angular/core": "8.1.0",
-    "@angular/platform-browser": "8.1.0",
-    "@angular/platform-browser-dynamic": "8.1.0",
-    "@angular/platform-server": "8.1.0",
-    "@angular/router": "8.1.0",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular-devkit/build-ng-packagr": "~0.800.6",
+    "@angular/cli": "~8.0.0",
+    "@angular/compiler-cli": "~8.0.0",
+    "@angular/language-service": "~8.0.0",
+    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "chalk": "1.1.3",
-    "codelyzer": "^5.0.1",
-    "compodoc": "0.0.41",
-    "core-js": "2.4.1",
-    "coveralls": "^2.13.0",
-    "istanbul": "^0.4.5",
-    "jasmine": "^3.4.0",
-    "jasmine-core": "^3.4.0",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "1.1.0",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "2.0.2",
-    "reflect-metadata": "0.1.9",
-    "rollup": "0.41.4",
-    "rxjs": "6.5.2",
-    "shelljs": "0.7.6",
-    "ts-helpers": "1.1.2",
-    "ts-loader": "2.0.0",
-    "tslint": "5.11.0",
-    "typescript": "~3.4.3",
-    "uglify-js": "2.7.5",
-    "webpack": "2.2.1",
-    "zone.js": "0.9.1"
-  },
-  "dependencies": {
-    "eslint": "^4.7.2",
-    "tsickle": "^0.35.0"
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "ng-packagr": "^5.1.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tsickle": "^0.35.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.4.3"
   }
 }
