--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ addons:
 language: node_js
 node_js:
   - stable
-before_install:
-  - npm i npm@^4 -g
+before_script:
+  - npm install -g @angular/cli
 install:
   - npm install
 script:
-  - npm test
+  - npm run test-headless
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
