--- a/.travis.yml
+++ b/.travis.yml
@@ -13,16 +13,16 @@ node_js:
   - stable
 before_script:
   - npm install -g @angular/cli
-install:
-  - npm install
+# install:
+#   - npm install
 script:
   - npm run test-headless
-before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - sleep 3
+# before_script:
+#   - export DISPLAY=:99.0
+#   - sh -e /etc/init.d/xvfb start
+#   - sleep 3
 notifications:
   email: false
-after_success:
-  - npm install -g codeclimate-test-reporter
-  - codeclimate-test-reporter < lcov.info
+# after_success:
+#   - npm install -g codeclimate-test-reporter
+#   - codeclimate-test-reporter < lcov.info
