--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ before_script:
   - sleep 3
 notifications:
   email: false
-after_success:
-  - npm install -g codeclimate-test-reporter
-  - codeclimate-test-reporter < lcov.info
+# after_success:
+#   - npm install -g codeclimate-test-reporter
+#   - codeclimate-test-reporter < lcov.info
