Update to angular 10

--- a/projects/ng2-signalr/package.json
+++ b/projects/ng2-signalr/package.json
@@ -19,5 +19,8 @@
     "typescript",
     "angular 9"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "tslib": "^2.0.0"
+  }
 }
