Peer dependencies fix

--- a/projects/ng2-signalr/package.json
+++ b/projects/ng2-signalr/package.json
@@ -2,8 +2,8 @@
   "name": "ng2-signalr",
   "version": "10.0.2",
   "peerDependencies": {
-    "@angular/common": "~10.0.2",
-    "@angular/core": "~10.0.2"
+    "@angular/common": "^10.0.2",
+    "@angular/core": "^10.0.2"
   },
   "author": "Hannes Neukermans",
   "repository": {
