--- a/angular.json
+++ b/angular.json
@@ -14,13 +14,13 @@
           "options": {
             "tsConfig": "projects/ng2-signalr/tsconfig.lib.json",
             "project": "projects/ng2-signalr/ng-package.json"
-          }
-        ,          "configurations": {
+          },
+          "configurations": {
             "production": {
               "tsConfig": "projects/ng2-signalr/tsconfig.lib.prod.json"
             }
           }
-},
+        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -42,6 +42,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "ng2-signalr"
 }
