--- a/projects/ng2-signalr/package.json
+++ b/projects/ng2-signalr/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng2-signalr",
-  "version": "12.0.0",
+  "name": "@henkkelder/ng2-signalr",
+  "version": "12.0.1",
   "peerDependencies": {
     "@angular/common": ">=12.0.0",
     "@angular/core": ">=12.0.0",
@@ -9,7 +9,7 @@
   "author": "Hannes Neukermans",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HNeukermans/ng2-signalR.git"
+    "url": "git+https://github.com/henkkelder/ng2-signalR.git"
   },
   "bugs": {
     "url": "https://github.com/HNeukermans/ng2-signalr/issues"
