--- a/projects/ng2-signalr/package.json
+++ b/projects/ng2-signalr/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@henkkelder/ng2-signalr",
-  "version": "12.0.1",
+  "version": "12.0.2",
   "peerDependencies": {
     "@angular/common": ">=12.0.0",
     "@angular/core": ">=12.0.0",
-    "rxjs": ">=6.0.0"
+    "rxjs": ">=6.0.0",
+    "zone.js": ">=0.11.0"
   },
   "author": "Hannes Neukermans",
   "repository": {
